force-app/main/default/objects/Contact/fields/abd_Mailing_County__c.field-meta.xml
<CustomField>
    <fullName>abd_Mailing_County__c</fullName>
    <description>Need to hold the applicant's county</description>
    <label>Mailing County</label>
    <length>20</length>
    <type>Text</type>
</CustomField>