force-app/main/default/objects/Contact/fields/abd_U_S_Citizen__c.field-meta.xml
<CustomField>
    <fullName>abd_U_S_Citizen__c</fullName>
    <label>U.S. Citizen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_Yes_No</valueSetName>
    </valueSet>
</CustomField>