force-app/main/default/objects/Contact/fields/MUSW__Alert_Indicator__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Alert_Indicator__c</fullName>
    <formula>HYPERLINK("/apex/musw__TaskAlert?id="+ Id, IMAGE( 
CASE( MUSW__AlertCode__c, 
0, "/img/samples/light_green.gif", 
1, "/img/samples/light_yellow.gif", 
2, "/img/samples/light_red.gif", 
"https://letterbatch.mybasicgov.com/img/light_off.gif"), 
"none"), "_top")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Clear Alert Status after closing all open Alert Tasks</inlineHelpText>
    <label>Alert</label>
    <type>Text</type>
</CustomField>