force-app/main/default/objects/Contact/fields/MUSW__DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__DBA_Name__c</fullName>
    <label>Business Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>