force-app/main/default/objects/Contact/fields/MUSW__SFId__c.field-meta.xml
<CustomField>
    <fullName>MUSW__SFId__c</fullName>
    <description>Used for contact upserts and ensuring less duplicates in Parcel Load Automation. SFId is the same as the contact ID minus the last 3 digits and can be used as an external id in upserts (the ID field cannot)</description>
    <externalId>true</externalId>
    <label>SFId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>