force-app/main/default/objects/Contact/validationRules/MUSW__Contact_Relationship_missing.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Contact_Relationship_missing</fullName>
    <active>true</active>
    <description>When Account is specified (and it isn't a Citizen, or having the same name as the Contact), account relationship is required</description>
    <errorConditionFormula>AND(ISPICKVAL(MUSW__Account_Relationship__c,"" ), NOT(ISBLANK(AccountId)), Account.Name != "Citizen" ,Account.Name != TRIM(IF(ISBLANK(FirstName),"", FirstName + " ") + IF(ISBLANK(MiddleName),"", MiddleName + " ") + LastName + IF(ISBLANK(Suffix),""," " + Suffix)), MUSW__DBA_Name__c != Account.Name)</errorConditionFormula>
    <errorDisplayField>MUSW__Account_Relationship__c</errorDisplayField>
    <errorMessage>* Specify Contact Relationship to Account (or leave Account blank) *</errorMessage>
</ValidationRule>