force-app/main/default/objects/Contact/validationRules/MUSW__Contact_Relationship_without_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Contact_Relationship_without_Account</fullName>
    <active>true</active>
    <description>When an account relationship is specified, but the account name is not filled in.</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(MUSW__Account_Relationship__c,"" )), AccountId  = "" )</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>* Specify which Account the Contact is related to (or leave Relationship blank) *</errorMessage>
</ValidationRule>